--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -54,6 +54,21 @@ h4 {
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
 }
+.infinite-scroll-component{
+  width: 100%;
+  display: grid;
+  margin: 3rem auto;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  justify-items: center;
+  gap: 20px;
+  row-gap: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  .infinite-scroll-component {
+    width: 90%;
+  }
+}
 
 @media only screen and (max-width: 1023px) {
   .column {
